@@ -16,7 +16,7 @@ sub bulk_insert {
     my $txn; $txn = $skinny->txn_scope unless $skinny->attribute->{active_transaction} != 0;
 
         for my $arg ( @{$args} ) {
-            $skinny->insert_without_trigger($table, $arg);
+            $skinny->_insert_or_replace(0, $table, $arg);
         }
 
     $txn->commit if $txn;
