@@ -2,6 +2,7 @@ Revision history for Perl extension DBIx::Skinny
 
 0.0710
    2010-04-22
+        - MOD : add replace method.
         - INCOMPATIBLE MOD: pre_insert and post_insert trigger should not work in bulk_insert. mysql driver does not effect this change. (walf443)
 
 0.0709
